Fixed spacing on about modules on small breakpoint

--- a/src/stylesheets/components/_about.scss
+++ b/src/stylesheets/components/_about.scss
@@ -107,7 +107,7 @@
     @include small {
       width: 42%;
       height: 500px;
-      transform: translate3d(0px, 395px, 0px);
+      transform: translate3d(0px, 430px, 0px);
       top: 0;
       margin: 0;
     }
@@ -138,6 +138,7 @@
     }
 
 	@include small {
+      height: 38vh;
       transform: translate3d(0px, 190px, 0px);
     }
 }
